argocd/apps-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "nextime-infra-group"
    alb.ingress.kubernetes.io/group.video: '20'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: ms-video
                port:
                  number: 80
          - path: /proccess-video
            pathType: Prefix
            backend:
              service:
                name: ms-proccess-video
                port:
                  number: 80
